// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIIsolationHeader> Inverted should render an automation id when a qaHook is passed in 1`] = `
<header
  className="xui-isolationheader"
  data-automationid="qahook"
  role="banner"
>
  <div
    className="xui-isolationheader--navigation"
  >
    <h2
      className="xui-isolationheader--title"
    >
      My title
    </h2>
    <h2
      className="xui-isolationheader--secondary-title"
    >
      My secondary title
    </h2>
  </div>
  <div
    className="xui-isolationheader--actions"
  >
    Tools
  </div>
</header>
`;

exports[`<XUIIsolationHeader> Inverted should render with the given className if provided 1`] = `
<header
  className="klass xui-isolationheader"
  role="banner"
>
  <div
    className="xui-isolationheader--navigation"
  >
    <h2
      className="xui-isolationheader--title"
    >
      My title
    </h2>
    <h2
      className="xui-isolationheader--secondary-title"
    >
      My secondary title
    </h2>
  </div>
  <div
    className="xui-isolationheader--actions"
  >
    Tools
  </div>
</header>
`;

exports[`<XUIIsolationHeader> Standard should render an automation id when a qaHook is passed in 1`] = `
<header
  className="xui-isolationheader"
  data-automationid="qahook"
  role="banner"
>
  <div
    className="xui-isolationheader--navigation"
  >
    <h2
      className="xui-isolationheader--title"
      title="Tooltip"
    >
      My title
    </h2>
    <h2
      className="xui-isolationheader--secondary-title"
      title="Tooltip"
    >
      My secondary title
    </h2>
  </div>
  <div
    className="xui-isolationheader--actions"
  >
    Tools
  </div>
</header>
`;

exports[`<XUIIsolationHeader> Standard should render with the given className if provided 1`] = `
<header
  className="klass xui-isolationheader"
  role="banner"
>
  <div
    className="xui-isolationheader--navigation"
  >
    <h2
      className="xui-isolationheader--title"
    >
      My title
    </h2>
    <h2
      className="xui-isolationheader--secondary-title"
    >
      My secondary title
    </h2>
  </div>
  <div
    className="xui-isolationheader--actions"
  >
    Tools
  </div>
</header>
`;
